@@ -2,6 +2,11 @@ CHANGELOG
 =========
 
 
+2021-07-18
+----------
+### Changelog extractor
+* Better detect previous version.
+
 2021-07-17
 ----------
 ### Specfile
